2011-12-12 Jérôme Pasquier  <rainbru@free.fr>

	* svn: many generated files ignored.

	* various Makefiles: removed from svn repository.

	* src/common/version.cpp (logOptions): logs building options.

2011-12-09 Jerome Pasquier  <rainbru@free.fr>

	* configure.in: BUILD_RELEASE issue fixed.

2011-11-29 Jerome Pasquier  <rainbru@free.fr>

	* RainbruRPG.lsm.in: modified: ready to be submitted.

2011-11-29 Jerome Pasquier  <rainbru@free.fr>

	* configure.in: checks again gnet-2.0.

2011-07-18 Jerome Pasquier  <rainbru@free.fr>

	* RainbruRPG.texi: fixed a @subtitle issue.

2011-06-05 Jerome Pasquier  <rainbru@free.fr>

	* src/client/languageselector.cpp (feedComboBox): use pre-increment.
	* src/client/main.cpp: remove unneeded cast for guiframelistener.
	* src/client/gsmainmenu.h (getCreateMenu): remove usunsed function.

2011-06-04 Jerome Pasquier  <rainbru@free.fr>

	* src/client/gsmainmenu.h: get rid od the dynamic menu feature.

	* src/client/gsConnection.cpp: label and window become members.
	* src/ogreGui/Font.cpp: Add assignent operator.
	* src/ogreGui/Label.cpp: Add assignent operator.
	* src/ogreGui/TextSettings.cpp: Add assignent operator and copy ctor.
	* src/ogreGui/Brush.cpp: Finish assignent operator.


2011-05-28 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Brush.cpp: Remove some unused getters.

2011-05-27 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Brush.cpp: Implement deep copy and assignment.

	* src/client/gsconnection.cpp: Implement deep copy and assignment.

2011-05-27 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/GlyphTest.cpp: Start unit tests implementation.

	* src/ogreGui/FontTest.cpp: Start unit tests implementation.

2011-04-30 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Makefile.am (rainbrurpg_tests_ogregui_SOURCES): Removed 
	some unit tests with Ogre failling due to Singleton issues.

	* src/ogreGui/FontManagerTestWithOgre.cpp: created.

	* configure.in (AC_CONFIG_FILES): Removed 'RainbruRPG.html/Makefile' 