@@ -115,27 +115,10 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-214 (02 dec 2011 - ???) SLOC ??? UT ??? FT ??:??
-- (5) Edited svn:ignore for multiples multiplesdirectories
+- (7) Moved IrrClient/ to ../OLD/
+- svn ignores Makefile from multiples directories
+- Edited svn:ignore for multiples directories
 - Remove some generated files from svn repository
 - version.cpp logs some compilation-time options
 - BUILD_RELEASE issue fixed
 - Changed ROADMAP file priority and version number
-
-* v0.0.5-213 (27 may 2011 - 02 dec 2011) SLOC 43,836 UT 270 FT 104:29
-- Updated LSM file
-- configure.in checks again gnet-2.0
-- Added datafiles to the distribution
-- Fixed a texinfo @subtitle error
-- Changes the texinfo version behaviour
-   to fix an automake error
-- Fix some issues detected with cppcheck in client/
-   gsmenubase, main, languageselector, launcheroptions
-- Some member pointers removed from client/
-- Get rid of the gsmenubase dynamic menu option
-- implement TextSettings' copy ctor (and Font)
-- gsmainmenu win and label become references
-- Assignement operator for TextSettings and Font
-- Finish copy ctor and assignement for Label
-- Finish copy ctor and assignement for Brush
-- Remove some unused getters in Brush
-- Implement deep copy and assignment for gsConnection and Brush (incomplete)
