@@ -65,10 +65,11 @@
   </tr>
 
 <!-- Add here a version when it is finished (when switching to revision++) -->
-  <tr class="regTest1">
+  <tr class="regTest2">
     <td>v0.0.5-213</td>
     <td>2 dec 2011</td>                               <!-- Date                  -->
-    <td align="right">43&nbsp;836</td>                 <!-- SLOC                  -->
+    <td align="right">43&nbsp;836
+      <A NAME="UpNote015" HREF="#Note015"><sup>15</sup></A></td>    <!-- SLOC  -->
     <td align="right">13</td>                          <!-- Console count         -->
     <td>220&nbsp;<font color="red">fail</font></td>    <!-- CppUnit unit tests    -->
     <td>50&nbsp;<font color="green">success</font></td><!-- Boost.Test unit tests -->
@@ -80,6 +81,7 @@
     <td><font color="red">Failed</font></td>           <!-- Unit tests result     -->
   </tr>
 
+  <tr class="regTest1">
     <td>v0.0.5-212</td>
     <td>27 may 2011</td> 
     <td align="right">43&nbsp;269</td>
@@ -1090,6 +1092,10 @@
    <A NAME="Note014"></A>14. These numbers show ChangeLog file length both for 2010 (496)
      and for 2011 (10).
      <A HREF="#UpNote014">Up</a><br>
+
+   <A NAME="Note015"></A>15. <code>IrrClient/</code>(2,218 SLOC) moved to 
+     <code>../OLD</code> just before the release 214.
+     <A HREF="#UpNote015">Up</a><br>
 <hr>
 
 <!-- hhmts start -->Last modified: Fri May 27 22:51:12 CEST 2011 <!-- hhmts end -->
